
2009-04-21  Hezekiah M. Carty  <hcarty@atmos.umd.edu>

	* examples/tools/gunzip.ml,
	* examples/tools/gzip.ml,
	* src/main/nothreads/batteries.ml,
	* src/main/threads/batteries.ml,
	* doc/development/NOTES: Rename module GZip -> Gzip

	* examples/tools/gnuzip.ml: Renamed from gzip.ml to avoid circular

2009-04-21  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>
	
	* Makefile.in: added missing \

2009-04-20  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extInt.mli: Pagination, comments.

2009-04-19  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/batteries_toolchain/ocamlbuild: Now using byte-plugin

	* Makefile.in: [install] now doesn't copy ocaml*

2009-04-18  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* testsuite/test_string.ml: [test_1] now uses final "?" for list comprehension

	* testsuite/main.ml: [Test_pmap.test_2] added

	* src/core/extlib/multiPMap.ml: patch by turpin applied

	* src/core/extlib/multiPMap.ml: flattened

	* testsuite/test_pmap.ml: [test_2] added

2009-04-17  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extLexing.mli: [new_line] now only defined for 3.11+

2009-04-15  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extString.ml: [find_from], [rfind_from] now raise [Invalid_string] if string is empty

2009-04-01  Jeremie Dimino <jeremie@dimino.org>

	* src/core/extlib/option.ml: fix t_printer

2009-03-31  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* configure.ac: [gnome-open] replaced by [x-www-browser]

	* Makefile.in: [all] now depends on [install-doc] rather than [install_doc]
	
	* src/core/extlib/extPervasives.ml*: [maybe_printer]

	* src/core/extlib/option.ml*: [maybe_printer]

	* src/core/extlib/print.mli: Further savage documentation spree.

	* src/core/extlib/value_printer.mli: typo

	* build/odoc_tags.ml: [INCLUDE "doc_batteries_factored.ml"]
